--- a/package.json
+++ b/package.json
@@ -4,5 +4,19 @@
   "main": "index.js",
   "repository": "git@github.com:TakahashiIkki/pokemon-modeling.git",
   "author": "ikkitang <new_ittyandesu@outlook.jp>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --respawn src/index.ts",
+    "tsc": "tsc"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.12",
+    "@types/node": "^15.12.2",
+    "ts-node": "^10.0.0",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.3.2"
+  }
 }
